websocket(ws) to secure websocket(wss) on prod config

--- a/src/assets/config/config.prod.json
+++ b/src/assets/config/config.prod.json
@@ -4,6 +4,6 @@
    },
    "apiServer": {
     "baseUrl": "https://demochessbackend.herokuapp.com",
-    "socketURL":"ws://demochessbackend.herokuapp.com/websocket/websocket"
+    "socketURL":"wss://demochessbackend.herokuapp.com/websocket/websocket"
   }
 }
